--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Java Script Evolution</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="moment.js"></script>
-    <script src="main.js"></script>
+    <script src="dist/main.js"></script>
+    <!-- <script src="main.js"></script> -->
 </head>
 
 <body>
